# pathte

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build_and_release.yml  tests.yml  workflow.yml
resources/: icon.afdesign
src/: clipboard.rs  keyboard_hook.rs  list_selection.rs  main.rs  path.rs  path_selection.rs  tray.rs  win_api.rs
