[package]
name = "pathte"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
tray-icon = "0.19.2"
clipboard-win = "4.5"
windows = { version = "0.48", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
lazy_static = "1.5.0"
regex = "1.11.1"